--- a/app/views/users/recipes/show.html.erb
+++ b/app/views/users/recipes/show.html.erb
@@ -42,7 +42,7 @@
 
 
             <div class="bg-gray-100 text-gray-900 group flex items-center px-2 py-2 text-sm font-medium ">
-              <svg class="w-7 h-7 fill-current" fill="none" xmlns="http://www.w3.org/2000/svg"
+              <svg class="w-9 h-8 mr-2 fill-current" fill="none" xmlns="http://www.w3.org/2000/svg"
                 xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 32 40"
                 enable-background="new 0 0 32 32" xml:space="preserve">
                 <path
@@ -50,13 +50,13 @@
                 <path
                   d="M19.145,19.978c-1.736,0-2.367,0-3.789,0c-0.984,0-1.441,0.317-1.441,1.011s0.758,0.988,1.441,0.988s1.316,0,1.842,0  c0.527,0,0.789,0.367,0.789,0.734c0,0.369-0.238,0.738-0.738,0.738s-2.236,0-2.842,0c-0.604,0-1.078-0.395-1.578-0.894  c-0.5-0.5-1.895-1.974-2.447-2.578c-0.551-0.605-1.117-0.347-1.369-0.094c-0.254,0.253-0.418,0.83,0.055,1.356  s3.156,3.709,3.762,4.209s1.289,0.736,1.895,0.736s1.869,0,2.844,0c0.973,0,2.277,0.043,2.973,0.633  c1.104,0.932,1.982,1.655,1.982,1.655l3.332-3.366c0,0-2.314-2.684-3.236-3.604C21.697,20.582,20.881,19.978,19.145,19.978z" />
               </svg>
-              <%= @recipe.servings %> portions</span>
+             <span class="text-lg font-semibold ml-2"><%= @recipe.servings %> portions</span>
             </div>
 
 
 
             <div class="bg-gray-50 text-gray-900 group flex items-center px-2 py-2 text-sm font-medium ">
-              <svg class="w-8 h-8 fill-current" fill="none" xmlns:x="http://ns.adobe.com/Extensibility/1.0/"
+              <svg class="w-8 h-8 ml-2 mr-1 fill-current" fill="none" xmlns:x="http://ns.adobe.com/Extensibility/1.0/"
                 xmlns:i="http://ns.adobe.com/AdobeIllustrator/10.0/" xmlns:graph="http://ns.adobe.com/Graphs/1.0/"
                 xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px"
                 y="0px" viewBox="0 0 100 125" style="enable-background:new 0 0 100 100;" xml:space="preserve">
@@ -75,12 +75,13 @@
                   </g>
                 </switch>
               </svg>
-              <%= @recipe.cal_per_serving %> calories par portion
+              <span class="font-semibold text-primary-500 mx-1 ml-2 text-lg"><%= @recipe.cal_per_serving %></span>
+               <span class="font-semibold text-primary-500 mr-2 text-lg">calories</span><span class="text-gray-500 italic text-sm"> par portion</span>
             </div>
 
 
             <div class="bg-gray-100 text-gray-900 group flex items-center px-2 py-2 text-sm font-medium ">
-              <svg class="w-7 h-7 fill-current" fill="none" xmlns="http://www.w3.org/2000/svg"
+              <svg class="w-7 h-7 ml-2 mr-2 fill-current" fill="none" xmlns="http://www.w3.org/2000/svg"
                 xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:serif="http://www.serif.com/" viewBox="0 0 153 110"
                 version="1.1" xml:space="preserve" style="" x="0px" y="0px" fill-rule="evenodd" clip-rule="evenodd"
                 stroke-linejoin="round" stroke-miterlimit="1.41421">
@@ -91,26 +92,27 @@
                   </g>
                 </g>
               </svg>
-              <%= @recipe.prot_per_serving %>g de protéines par portion
+              <span class="font-semibold text-red-500 mx-2 text-lg"><%= @recipe.prot_per_serving %>g</span>
+               de <span class="font-semibold text-red-500 mx-2 text-lg">protéines</span> <span class="text-gray-500 italic text-sm"> par portion</span>
             </div>
 
             <div class="bg-gray-50 text-gray-900 group flex items-center px-2 py-2 text-sm font-medium ">
-              <svg class="w-7 h-7 fill-current" fill="none" xmlns="http://www.w3.org/2000/svg"
+              <svg class="w-7 h-7 ml-2 mr-2 fill-current" fill="none" xmlns="http://www.w3.org/2000/svg"
                 xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 512 640"
                 enable-background="new 0 0 512 512" xml:space="preserve">
                 <path
                   d="M474.125,37.875c-39.553-39.545-103.676-39.554-143.231,0l-8.205,8.207c42.997,33.414,52.253,103.522,52.253,103.522  c1.654,8.992-4.281,17.629-13.282,19.292c-7.882,1.452-15.487-2.936-18.358-10.095c0,0-16.034-53.278-59.226-74.105l-65.546,65.551  c45.324,37.278,52.247,103.53,52.247,103.53c1.654,8.992-4.298,17.62-13.282,19.282c-7.881,1.451-15.487-2.935-18.357-10.095  c0,0-18.453-56.229-59.222-74.103l-65.546,65.551c46.826,42.795,52.244,103.522,52.244,103.522  c1.654,8.992-4.282,17.627-13.283,19.29c-7.881,1.452-15.487-2.936-18.357-10.095c0,0-11.164-45.961-59.217-74.102l-37.877,37.879  c-39.553,39.547-39.553,103.669,0,143.215c39.539,39.555,103.662,39.555,143.215,0l293.031-293.022  C513.68,141.553,513.664,77.414,474.125,37.875z" />
               </svg>
-              <%= @recipe.carbs_per_serving %>g de glucides par portion</span>
+              <span class="font-semibold text-purple-500 mx-2 text-lg"><%= @recipe.carbs_per_serving %>g</span> de <span class="font-semibold text-purple-500 mx-2 text-lg">glucides</span> <span class="text-gray-500 italic text-sm"> par portion</span>
             </div>
 
             <div class="bg-gray-100 text-gray-900 group flex items-center px-2 py-2 text-sm font-medium ">
-              <svg class="w-7 h-7 fill-current" fill="none" xmlns="http://www.w3.org/2000/svg"
+              <svg class="w-7 h-7 ml-2 mr-2 fill-current" fill="none" xmlns="http://www.w3.org/2000/svg"
                 data-name="Kitchen Objects" viewBox="0 0 60 75" x="0px" y="0px">
                 <path
                   d="M58,49.94H51V35a3.99891,3.99891,0,0,0-4-4H38.90991L43.72,26.21a2.01609,2.01609,0,0,0,2.83008,0L47.98,24.79a3.01167,3.01167,0,0,0,0-4.25l-.71-.71L58.43994,8.67A5.14685,5.14685,0,0,0,58.9,1.82a5.02027,5.02027,0,0,0-7.41-.35L37.37,15.6a2.98473,2.98473,0,0,0-.88,2.29L23.29,31H13a3.99891,3.99891,0,0,0-4,4V49.94H2a2.00587,2.00587,0,0,0-2,2V53a3.00883,3.00883,0,0,0,3,3H4.32007l2.59985,3.24A1.986,1.986,0,0,0,8.48,60H51.52a2.00719,2.00719,0,0,0,1.56006-.75L55.67993,56H57a3.00883,3.00883,0,0,0,3-3V51.94A2.00587,2.00587,0,0,0,58,49.94ZM52.3,6.32A1.21114,1.21114,0,0,1,52.62,6.1a1.14428,1.14428,0,0,1,.77,0,.95349.95349,0,0,1,.17.1.56622.56622,0,0,1,.1499.12.999.999,0,0,1,.3.71.95936.95936,0,0,1-.3.7.87512.87512,0,0,1-.31995.22.99559.99559,0,0,1-.38.08,1.00669,1.00669,0,0,1-.39-.08A.87512.87512,0,0,1,52.3,7.73a.95042.95042,0,0,1-.29-.7A.98953.98953,0,0,1,52.3,6.32ZM18,35h2a1,1,0,0,1,0,2H18a1,1,0,0,1,0-2ZM11,56H10a1,1,0,0,1,0-2h1a1,1,0,0,1,0,2Zm2.29-19.29a.98941.98941,0,0,1-.21-1.09,1.15178,1.15178,0,0,1,.21-.33A1.00953,1.00953,0,0,1,14.2,35.02a.636.636,0,0,1,.18005.06.55839.55839,0,0,1,.17.09.98708.98708,0,0,1,.1499.12A1.03847,1.03847,0,0,1,15,36a.95964.95964,0,0,1-.3.71.97371.97371,0,0,1-1.08.21A1.15349,1.15349,0,0,1,13.29,36.71ZM23,56H15a1,1,0,0,1,0-2h8a1,1,0,0,1,0,2ZM37,35a3.00883,3.00883,0,0,1-3,3,2.77234,2.77234,0,0,1-1-.18V43a3,3,0,0,1-6,0V41.82A2.77234,2.77234,0,0,1,26,42a3.00883,3.00883,0,0,1-3-3V33h2v6a1,1,0,0,0,2,0V33h2V43a1,1,0,0,0,2,0V33h2v2a1,1,0,0,0,2,0V33h2Z" />
               </svg>
-              <%= @recipe.fat_per_serving %>g de lipides par portion
+              <span class="font-semibold text-yellow-400 mx-2 text-lg"><%= @recipe.fat_per_serving %>g </span> de <span class="font-semibold text-yellow-400 mx-2 text-lg">lipides</span> <span class="text-gray-500 italic text-sm"> par portion</span>
             </div>
 
 
@@ -120,27 +122,10 @@
 
         </div>
         <div class="mt-5 prose prose-indigo text-gray-500 mx-auto lg:max-w-none lg:row-start-1 lg:col-start-1">
-          <%= @recipe.ingredients_list %>
-          <p>Sollicitudin tristique eros erat odio sed vitae, consequat turpis elementum. Lorem nibh vel, eget pretium
-            arcu vitae. Eros eu viverra donec ut volutpat donec laoreet quam urna.</p>
-          <p>Bibendum eu nulla feugiat justo, elit adipiscing. Ut tristique sit nisi lorem pulvinar. Urna, laoreet fusce
-            nibh leo. Dictum et et et sit. Faucibus sed non gravida lectus dignissim imperdiet a.</p>
-          <p>Dictum magnis risus phasellus vitae quam morbi. Quis lorem lorem arcu, metus, egestas netus cursus. In.</p>
-          <ul>
-            <li>Quis elit egestas venenatis mattis dignissim.</li>
-            <li>Cras cras lobortis vitae vivamus ultricies facilisis tempus.</li>
-            <li>Orci in sit morbi dignissim metus diam arcu pretium.</li>
-          </ul>
-          <p>Rhoncus nisl, libero egestas diam fermentum dui. At quis tincidunt vel ultricies. Vulputate aliquet velit
-            faucibus semper. Pellentesque in venenatis vestibulum consectetur nibh id. In id ut tempus egestas. Enim sit
-            aliquam nec, a. Morbi enim fermentum lacus in. Viverra.</p>
-          <h3>How we helped</h3>
-          <p>Tincidunt integer commodo, cursus etiam aliquam neque, et. Consectetur pretium in volutpat, diam. Montes,
-            magna cursus nulla feugiat dignissim id lobortis amet. Laoreet sem est phasellus eu proin massa, lectus.
-            Diam rutrum posuere donec ultricies non morbi. Mi a platea auctor mi.</p>
-          <p>Sagittis scelerisque nulla cursus in enim consectetur quam. Dictum urna sed consectetur neque tristique
-            pellentesque. Blandit amet, sed aenean erat arcu morbi.</p>
+          <p class="text-gray-600 text-lg font-semibold mb-2">Ingrédients :<p>        
+          <p><%= @recipe.ingredients_list %><p>          
         </div>
+         <%= link_to "Voir la recette sur Marmiton", @recipe.marmiton_url  %> 
       </div>
     </div>
   </div>
