--- a/app/views/users/recipes/show.html.erb
+++ b/app/views/users/recipes/show.html.erb
@@ -1,12 +1,11 @@
 <%= render 'users/users/welcome'%>
 
-<div class="h-screen flex relative">
+<div class="h-screen flex relative max-w-90">
 
   <%= render 'users/users/sidebar' %>
 
   <div class="relative max-w-7xl mx-auto py-16 px-4 sm:px-6 lg:px-8 lg:mt-8">
 
-    <div class="hidden lg:block absolute top-0 bottom-0 left-3/4 w-screen"></div>
     <div class="mx-auto text-base max-w-prose lg:max-w-none">
 
       <h3 class="mt-2 text-3xl leading-8 font-bold tracking-tight text-gray-900 sm:text-4xl"><%= @recipe.title %></h3>
@@ -14,7 +13,7 @@
 
     <div class="mt-8 lg:grid lg:grid-cols-2 lg:gap-8">
 
-      <div class="relative lg:row-start-1 lg:col-start-2">
+      <div class="relative lg:row-start-1 lg:col-start-2 overflow-x-hidden">
 
         <svg class="hidden lg:block absolute top-0 right-0 -mt-20 -mr-20" width="404" height="384" fill="none"
           viewBox="0 0 404 384" aria-hidden="true">
@@ -125,7 +124,9 @@
           <p class="text-gray-600 text-lg font-semibold mb-2">Ingrédients :<p>        
           <p><%= @recipe.ingredients_list %><p>          
         </div>
-         <%= link_to "Voir la recette sur Marmiton", @recipe.marmiton_url  %> 
+         <%= link_to @recipe.marmiton_url, class:"outline-none" do %>
+          <button class="submit-warning bg-warning outline-none">Voir la recette sur Marmiton</button>
+         <% end %> 
       </div>
     </div>
   </div>
