--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -263,6 +263,18 @@ input[type="number"]::-webkit-outer-spin-button {
   box-shadow: inset 0px 0px 0px 2px #ffffff;
 }
 
+.days-list:hover {
+  box-shadow: inset 0px 0px 0px 2px #ffffff;
+}
+
+.days-list:focus {
+  box-shadow: inset 0px 0px 0px 2px #ffffff;
+}
+
+.nice-btns:active {
+  box-shadow: inset 0px 0px 0px 2px #ffffff;
+}
+
 ::-webkit-input-placeholder {
   /* Edge */
   color: lightgray;
