fixed forms with redirect

--- a/app/views/users/users/_form.html.erb
+++ b/app/views/users/users/_form.html.erb
@@ -12,7 +12,7 @@
       </div>
 
       <div class="mt-5 md:mt-0 md:col-span-2 mx-8 mb-15">
-        <%= form_with(model: @user, method: "put") do |f| %>
+        <%= form_with(model: @user, method: "put", local: true) do |f| %>
         <div class="input-group js-input-group">
           <div class="input-container ic1">
             <div class="grid grid-cols-3 gap-6">
