--- a/app/views/users/plans/_new.html.erb
+++ b/app/views/users/plans/_new.html.erb
@@ -36,7 +36,7 @@
 
             <h2 class="text-xl mb-4 text-center">Combien de jours veux-tu générer ?</h2>
             <div class="form-modal">
-              <%= form_with model: Plan.new, url: plans_path, method: "post" do |f| %>
+              <%= form_with(model: Plan.new, url: plans_path, method: "post", local: true) do |f| %>
               <div class="flex flex-row h-10 w-full rounded-lg relative bg-transparent mt-1 -mr-25">
                 <button data-action="decrement" id="decrement"
                   class=" bg-primary-300 text-gray-600 hover:bg-primary-800 hover:text-white  w-20 rounded-l cursor-pointer outline-none ">
@@ -63,4 +63,3 @@
     </div>
   </div>
   <%= javascript_pack_tag 'new_plan' %>
-
