--- a/app/assets/stylesheets/static.scss
+++ b/app/assets/stylesheets/static.scss
@@ -2,12 +2,21 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
 body {
-    background-image: url(asset_path('bg-webbis.svg'));
+  background-image: url(asset_path('bgmobile.svg'));
     background-size: cover;
     background-repeat: no-repeat;
     z-index: -1;
 }
 
+@media (min-width: 970px) {
+  .body {
+    
+    background-image: url(asset_path('bgweb.svg'));
+    background-size: cover;
+    background-repeat: no-repeat;
+    z-index: -1;;
+  }
+}
 .presentation {
   background-image: url(asset_path('bg_faq.svg'));
   background-size: cover;
