form to create recipe, to test

--- a/app/views/admins/recipes/new.html.erb
+++ b/app/views/admins/recipes/new.html.erb
@@ -2,7 +2,7 @@
 <div class="h-screen flex overflow-hidden">
   <%= render 'users/users/sidebar' %>
   <div class="flex mx-auto">
- <%= render 'admins/recipes/form'%>
+ <%= render 'admins/recipes/form', recipe: @recipe%>
   </div>
  
 
