--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
 
 <%= render "layouts/navbar" %>
 
-<body class="mb-auto overflow-hidden">
+<body class="mb-auto">
   <!--<div class="flex flex-col max-w-full h-full justify-between">-->
 
 
