beautify user form

--- a/app/views/users/users/_form.html.erb
+++ b/app/views/users/users/_form.html.erb
@@ -110,9 +110,20 @@
         <div class="input-group js-input-group">
           <div class="input-container ic1">
             <%= f.number_field :height_in_cms, in: 80..250, placeholder: '', value: current_user.height_in_cms, required: true, class:"input" %>
-                <div class="absolute inset-y-0 right-0 pr-3 pt-2 flex items-center pointer-events-none text-gray-400">
-            <svg class="h-7 w-7 fill-current" fill="none" xmlns="http://www.w3.org/2000/svg" data-name="Layer 1" viewBox="0 0 200 250" x="0px" y="0px"><title>Height</title><path d="M54.49,179.64a6.82,6.82,0,0,1-6.83-6.82V36.28a6.83,6.83,0,0,1,13.66,0h0V172.82A6.82,6.82,0,0,1,54.49,179.64Z"/><path d="M72.69,38.56H36.28a6.83,6.83,0,0,1,0-13.65H72.69a6.83,6.83,0,1,1,0,13.65Zm0,141.08H36.28a6.83,6.83,0,0,1,0-13.65H72.69a6.83,6.83,0,1,1,0,13.65ZM131.86,70.42a29.59,29.59,0,1,1,29.58-29.58A29.58,29.58,0,0,1,131.86,70.42Zm0-45.51a15.93,15.93,0,1,0,15.93,15.93h0a15.93,15.93,0,0,0-15.93-15.93Z"/><path d="M163.72,129.58H100a6.82,6.82,0,0,1-6.83-6.82V86.35a20.53,20.53,0,0,1,20.48-20.48h36.41a20.52,20.52,0,0,1,20.48,20.48v36.41A6.82,6.82,0,0,1,163.72,129.58Zm-56.89-13.65h50.06V86.35a6.83,6.83,0,0,0-6.83-6.83H113.65a6.82,6.82,0,0,0-6.82,6.83Z"/><path d="M150.06,188.75H113.65a6.82,6.82,0,0,1-6.82-6.83V122.76a6.82,6.82,0,0,1,6.82-6.83h36.41a6.83,6.83,0,0,1,6.83,6.83v59.16A6.83,6.83,0,0,1,150.06,188.75Zm-29.58-13.66h22.76V129.58H120.48Z"/></svg>
-                </div>
+            <div class="absolute inset-y-0 right-0 pr-3 pt-2 flex items-center pointer-events-none text-gray-400">
+              <svg class="h-7 w-7 fill-current" fill="none" xmlns="http://www.w3.org/2000/svg" data-name="Layer 1"
+                viewBox="0 0 200 250" x="0px" y="0px">
+                <title>Height</title>
+                <path
+                  d="M54.49,179.64a6.82,6.82,0,0,1-6.83-6.82V36.28a6.83,6.83,0,0,1,13.66,0h0V172.82A6.82,6.82,0,0,1,54.49,179.64Z" />
+                <path
+                  d="M72.69,38.56H36.28a6.83,6.83,0,0,1,0-13.65H72.69a6.83,6.83,0,1,1,0,13.65Zm0,141.08H36.28a6.83,6.83,0,0,1,0-13.65H72.69a6.83,6.83,0,1,1,0,13.65ZM131.86,70.42a29.59,29.59,0,1,1,29.58-29.58A29.58,29.58,0,0,1,131.86,70.42Zm0-45.51a15.93,15.93,0,1,0,15.93,15.93h0a15.93,15.93,0,0,0-15.93-15.93Z" />
+                <path
+                  d="M163.72,129.58H100a6.82,6.82,0,0,1-6.83-6.82V86.35a20.53,20.53,0,0,1,20.48-20.48h36.41a20.52,20.52,0,0,1,20.48,20.48v36.41A6.82,6.82,0,0,1,163.72,129.58Zm-56.89-13.65h50.06V86.35a6.83,6.83,0,0,0-6.83-6.83H113.65a6.82,6.82,0,0,0-6.82,6.83Z" />
+                <path
+                  d="M150.06,188.75H113.65a6.82,6.82,0,0,1-6.82-6.83V122.76a6.82,6.82,0,0,1,6.82-6.83h36.41a6.83,6.83,0,0,1,6.83,6.83v59.16A6.83,6.83,0,0,1,150.06,188.75Zm-29.58-13.66h22.76V129.58H120.48Z" />
+              </svg>
+            </div>
             <div class="cut cut-large bg-gray-100"></div>
             <label for="height_in_cms" class="placeholder">Taille en cm</>
           </div>
