correct spelling mistake on landing page

--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -107,8 +107,7 @@
           </summary>
 
           <p class="px-4 py-2 bg-white">
-            Bien-sûr aucune contre-partie financière n'est demandé, il n'y a actuellement pas de version payant de
-            l'application.
+            Bien-sûr aucune contre-partie financière n'est demandée, il n'y a actuellement pas de version payante de l'application.
           </p>
         </details>
       </div>
