--- a/app/views/users/users/_form.html.erb
+++ b/app/views/users/users/_form.html.erb
@@ -1,6 +1,6 @@
-<div class="container mx-auto mb-auto">
+<div class="container mx-auto mb-auto h-screen">
 
-  <div class="middle-page flex items-center justify-evenly h-full">
+  <div class="middle-page flex items-center justify-evenly h-full overscroll-y-contain">
 
     <div class="md:grid md:grid-cols-3 md:gap-6 mx-3 my-3 py-8 bg-gray-100 rounded-2xl shadow-xl">
       <div class="md:col-span-1">
