--- a/app/views/users/users/show.html.erb
+++ b/app/views/users/users/show.html.erb
@@ -1,10 +1,10 @@
 <%= render 'welcome'%>
 
-<div class="h-screen flex">
+<div class="flex">
 
   <%= render 'sidebar' %>
 
-  <div class="flex flex-col w-0 flex-1 overflow-hidden">
+  <div class="flex flex-col w-0 flex-1 overflow-hidden h-screen">
 
     <main class="flex-1 relative overflow-y-auto focus:outline-none" tabindex="0">
       <div class="py-2">
