--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -321,4 +321,32 @@ input:focus::placeholder {
 }
 
 
-// radio buttons
+// landing page
+
+.chief {
+  height: 560px;
+  width: 468px;
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-drag: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+}
+
+.clock {
+  height: 25px;
+  width: 25px;
+}
+
+.calorie {
+  height: 25px;
+  width: 25px;
+}
+
+.tlweb {
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-drag: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+}
