--- a/app/views/users/users/edit.html.erb
+++ b/app/views/users/users/edit.html.erb
@@ -1,6 +1,6 @@
   <%= render 'welcome'%>
 
-  <div class="h-screen flex overflow-hidden">
+  <div class="h-screen flex">
     <%= render 'sidebar' %>
     <%= render 'form' %>
   </div>
