div push footer

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<div class="min-h-80 my-auto flex flex-col justify-center py-12 sm:px-6 lg:px-8 max-h-90">
+<div class="my-auto flex flex-col justify-center py-12 sm:px-6 lg:px-8">
   <div class="sm:mx-auto sm:w-full sm:max-w-md">
 
     <%= image_tag 'logogo', class:"mx-auto h-12 w-auto" %>
