--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -12,7 +12,15 @@ body {
   width: 100%;
   height: 100%;
   margin: 0px;
-  padding: 0px;
+  padding: 0px;  
+  overflow-x: none;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+.wrapper {
+  flex-grow: 1;
 }
 
 *:focus {
