--- a/app/views/users/recipes/show.html.erb
+++ b/app/views/users/recipes/show.html.erb
@@ -1,6 +1,6 @@
 <%= render 'users/users/welcome'%>
 
-<div class="flex relative max-w-full">
+<div class="flex relative max-w-full min-h-screen">
 
   <%= render 'users/users/sidebar' %>
 
