updated dashboard with titles, edit account view

--- a/app/views/users/users/_form.html.erb
+++ b/app/views/users/users/_form.html.erb
@@ -161,7 +161,7 @@
         </ul>
 
         <div class="mt-8">
-          <%= f.select :activity_level, [["J'ai un métier sédentaire et je ne pratique pas de sport", "1"],['Je pratique du sport de 1 à 3 fois par semaine', "2"], ['Je pratique du sport de 3 à 5 fois par semaine', "3"], ['Je pratique du sport presque quotidiennement', "4"], ["J'ai un métier physique et je pratique du sport presque quotidiennement", "5"]], { required: true } , { class:"mt-1 block w-full pl-3 pr-10 py-2 text-sm border-gray-300 rounded-md" } %>
+          <%= f.select :activity_level, [["J'ai un métier sédentaire et je ne pratique pas de sport", "1"],['Je pratique du sport de 1 à 3 fois par semaine', "2"], ['Je pratique du sport de 3 à 5 fois par semaine', "3"], ['Je pratique du sport presque quotidiennement', "4"], ["J'ai un métier physique et je pratique du sport presque quotidiennement", "5"]], { required: true } , { class:"mt-1 block w-full pl-3 pr-10 py-2 text-sm border-gray-300 rounded-md text-gray-900" } %>
         </div>
 
         <%= f.submit "Valider", class:"submit" %>
