--- a/app/views/users/users/_sidebar.html.erb
+++ b/app/views/users/users/_sidebar.html.erb
@@ -8,7 +8,7 @@
         <nav class="flex-1 px-2 space-y-1">
 
 
-          <%= link_to user_path(current_user), class:"bg-gray-100 text-gray-900 group flex items-center px-2 py-2 text-sm font-medium rounded-md" do %>
+          <%= link_to user_path(current_user), class:"bg-gray-100 hover:bg-primary-800 hover:text-white text-gray-900 group flex items-center px-2 py-2 text-sm font-medium rounded-md" do %>
           <svg class="text-gray-500 mr-3 h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
             stroke="currentColor" aria-hidden="true">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -29,6 +29,11 @@
           <% end %>
 
           <%= link_to edit_user_path(current_user), class:"text-gray-600 hover:bg-primary-800 hover:text-white group flex items-center px-2 py-2 text-sm font-medium rounded-md" do %>
+         <svg class="text-gray-500 fill-current group-hover:text-white mr-3 h-6 w-6" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 32 40" style="enable-background:new 0 0 32 32;" xml:space="preserve"><g><g><g><path d="M7.90625,10c-2.7568359,0-5-2.2431641-5-5s2.2431641-5,5-5s5,2.2431641,5,5S10.6630859,10,7.90625,10z M7.90625,2     c-1.6542969,0-3,1.3457031-3,3s1.3457031,3,3,3s3-1.3457031,3-3S9.5605469,2,7.90625,2z"/></g><g><path d="M9.3125,32H6.5c-1.5244141,0-2.7822266-1.1455078-2.9248047-2.6640625l-0.6601563-6.2617188     c-0.9863281-0.2827148-1.7519531-1.1074219-1.9316406-2.1650391l-0.2539063-1.496582     c-0.3603516-2.1186523,0.2294922-4.2744141,1.6152344-5.9160156c1.3867188-1.6411133,3.4130859-2.5825195,5.5615234-2.5825195     s4.1767578,0.9414063,5.5625,2.5834961c1.3857422,1.6411133,1.9746094,3.796875,1.6152344,5.9145508l-0.2539063,1.4970703     c-0.1796875,1.0576172-0.9453125,1.8823242-1.9326172,2.1650391l-0.6611328,6.2729492     C12.0966797,30.8544922,10.8388672,32,9.3125,32z M7.90625,12.9140625c-1.5576172,0-3.0283203,0.6826172-4.0332031,1.8730469     c-1.0058594,1.1904297-1.4326172,2.7543945-1.171875,4.2900391l0.2539063,1.4970703     c0.0595703,0.3510742,0.3603516,0.6054688,0.7158203,0.6054688h0.1552734c0.5117188,0,0.9404297,0.3862305,0.9941406,0.8950195     l0.7441406,7.0625C5.6113281,29.6337891,6.0126953,30,6.5,30h2.8125c0.4873047,0,0.8886719-0.3657227,0.9335938-0.8505859     l0.7460938-7.074707c0.0537109-0.5087891,0.4824219-0.8950195,0.9941406-0.8950195h0.1552734     c0.3554688,0,0.6572266-0.2543945,0.7158203-0.6044922l0.2539063-1.4975586     c0.2617188-1.5361328-0.1650391-3.0996094-1.1708984-4.2900391C10.9355469,13.597168,9.4648438,12.9140625,7.90625,12.9140625z"/></g></g><g><g><path d="M30.375,12.9140625H17.8125c-0.5527344,0-1-0.4477539-1-1s0.4472656-1,1-1H30.375c0.5527344,0,1,0.4477539,1,1     S30.9277344,12.9140625,30.375,12.9140625z"/></g><g><path d="M30.375,20.2929688H17.8125c-0.5527344,0-1-0.4477539-1-1s0.4472656-1,1-1H30.375c0.5527344,0,1,0.4477539,1,1     S30.9277344,20.2929688,30.375,20.2929688z"/></g><g><path d="M30.375,27.671875H17.8125c-0.5527344,0-1-0.4477539-1-1s0.4472656-1,1-1H30.375c0.5527344,0,1,0.4477539,1,1     S30.9277344,27.671875,30.375,27.671875z"/></g></g></g></svg>
+          Mes informations
+          <% end %>
+
+          <%= link_to edit_user_registration_path(current_user), class:"text-gray-600 hover:bg-primary-800 hover:text-white group flex items-center px-2 py-2 text-sm font-medium rounded-md" do %>
           <svg class="text-gray-400 fill-current group-hover:text-white mr-3 h-6 w-6"
             xmlns:x="http://ns.adobe.com/Extensibility/1.0/" xmlns:i="http://ns.adobe.com/AdobeIllustrator/10.0/"
             xmlns:graph="http://ns.adobe.com/Graphs/1.0/" fill="none" xmlns="http://www.w3.org/2000/svg"
@@ -52,10 +57,11 @@
               </g>
             </switch>
           </svg>
-          Mettre à jour mon profil
+          Paramètres du compte
           <% end %>
 
           <% if current_user.admin %>
+          <hr>
           <a href="<%=admins_admin_path(current_user.id)%>"
             class="text-gray-600 hover:bg-primary-800 hover:text-white group flex items-center px-2 py-2 text-sm font-medium rounded-md">
             <!-- Heroicon name: chart-bar -->
@@ -66,16 +72,17 @@
             </svg>
             Admin
           </a>
-          
+
           <%= link_to new_admins_recipe_path, class:"text-gray-600 hover:bg-primary-800 hover:text-white group flex items-center px-2 py-2 text-sm font-medium rounded-md" do %>
           <svg class="text-gray-400 group-hover:text-white mr-3 h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none"
-          viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-          d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z" />
+            viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+              d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z" />
           </svg>
-          Ajouter recettes
+          Ajouter une recette
           <% end %>
           <% end %>
+          <hr>
         </nav>
       </div>
     </div>
