--- a/app/views/users/users/show.html.erb
+++ b/app/views/users/users/show.html.erb
@@ -6,7 +6,7 @@
 
   <div class="flex flex-col w-0 flex-1 overflow-hidden h-screen">
 
-    <main class="flex-1 relative overflow-y-auto focus:outline-none" tabindex="0">
+    <main class="flex-1 relative overflow-y-auto focus:outline-none">
       <div class="py-2">
 
 
@@ -14,6 +14,10 @@
         <!-- Content -->
         <div class="max-w-7xl mx-auto px-4 sm:px-6 md:px-8">
           <div class="mt-12">
+           <h1 class="text-2xl -mt-8 font-semibold text-gray-700 mb-5">Bonjour <span
+                    class="text-primary-800 text-3xl ml-1s "><%= current_user.first_name %></span> !</h1>
+                 
+            <h2 class="text-base text-gray-500 "> Ton récap santé : </h2>   
             <ul class="mt-3 grid grid-cols-1 gap-5 sm:gap-6 sm:grid-cols-2 lg:grid-cols-4">
               <li class="col-span-1 flex shadow-sm rounded-md">
                 <div
@@ -142,9 +146,9 @@
 
 
 
-          <div class="py-4 mt-6 ">
-            <div class="rounded-lg h-96">
-              <div class="max-w-7xl mx-auto px-4 sm:px-6 md:px-8">
+          <div class="py-4 mt-6">
+            <div class="rounded-lg h-96 ">
+              <div class="max-w-7xl mx-auto px-4 sm:px-6 md:px-8 ">
                 <% if current_user.plans.exists? %>
                 <h1 class="text-xl -ml-8 font-semibold text-gray-700 mb-5">Ton dernier <span
                     class="text-primary-800 text-2xl mx-2">programme</span> du <%= @plan.created_at.strftime("%d-%m-%Y") %> : </p>
