--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,7 +38,8 @@
             <div class="flex items-start">
               <div class="ml-3 w-0 flex-1 pt-0.5">
                 <div class="text-lg leading-5 font-medium">
-                  <p> <%= notice%> </p>
+                  <p> <%= notice %> </p>
+                  <p> <%= error %> </p>
                 </div>
               </div>
               <div class="ml-4 flex-shrink-0 flex">
