1 animation added in landing page

--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -38,7 +38,7 @@
     </div>
 
   <!--presentation start-->
-  <h1 class="text-2xl font-bold  tracking-wide	 text-center my-12 md:my-20">Bien manger n'a jamais été aussi facile !
+  <h1 data-aos="fade-up" class="text-2xl font-bold  tracking-wide	 text-center my-12 md:my-20">Bien manger n'a jamais été aussi facile !
   </h1>
   <div class="presentation px-2 py-12 text-gray-700 body-font">
     <div class="flex items-center lg:w-3/5 mx-auto border-b pb-10 mb-10 border-gray-200 sm:flex-row flex-col">
