--- a/app/views/users/plans/_indexevenrow.html.erb
+++ b/app/views/users/plans/_indexevenrow.html.erb
@@ -12,13 +12,15 @@
     Keto
   </td>
   <td class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium">
-    <%= link_to plan_path(plan.id), class:"text-primary-600 hover:text-primary-900" do %>
-    <p> Voir </p>
+    <%= link_to plan_path(plan.id), method: :patch, class:"text-primary-600 hover:text-primary-900" do %>
+    <p> Choisir </p>
     <% end %>
   </td>
   <td class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium">
-    <%= link_to plan_path(plan.id),  method: :delete, data: {remote: true, confirm: "Supprimer le plan?" }, class:"text-warning hover:text-yellow-500" do %>
-    <p> Supprimer </p>
+    <% if plan.id != current_user.current_plan_id %>
+      <%= link_to plan_path(plan.id),  method: :delete, data: {remote: true, confirm: "Supprimer le plan?" }, class:"text-warning hover:text-yellow-500" do %>
+      <p> Supprimer </p>
+      <% end %>
     <% end %>
   </td>
 </tr>
