--- a/app/views/users/users/_form.html.erb
+++ b/app/views/users/users/_form.html.erb
@@ -18,7 +18,7 @@
             <div class=" border rounded-tl-xl rounded-tr-xl p-4 flex flex-col md:pl-4 md:pr-6  bg-white">
               <label class="flex items-center text-sm cursor-pointer">
                 <%= f.radio_button(:gender, "Homme", class:"w-5 h-5")  %>
-                <span class="ml-3 font-medium text-gray-900"><%= label_tag(:gender, "Je suis un homme") %></span>
+                <span class="ml-3 font-medium text-gray-900">Je suis un homme</span>
               </label>
             </div>
           </li>
@@ -27,7 +27,7 @@
             <div class=" border rounded-bl-xl rounded-br-xl p-4 flex flex-col md:pl-4 md:pr-6  bg-white">
               <label class="flex items-center text-sm cursor-pointer">
                 <%= f.radio_button(:gender, "Femme", class:"w-5 h-5") %>
-                <span class="ml-3 font-medium text-gray-900"><%= label_tag(:gender, "Je suis une femme") %></span>
+                <span class="ml-3 font-medium text-gray-900">Je suis une femme</span>
               </label>
             </div>
           </li>
@@ -136,7 +136,7 @@
               <label class="flex items-center text-sm cursor-pointer">
                 <%= f.radio_button(:objective, "1", class:"w-5 h-5")  %>
                 <span
-                  class="ml-3 font-medium text-gray-900"><%= label_tag(:objective, "Je veux perdre du poids") %></span>
+                  class="ml-3 font-medium text-gray-900">Je veux perdre du poids</span>
               </label>
             </div>
           </li>
@@ -145,7 +145,7 @@
               <label class="flex items-center text-sm cursor-pointer">
                 <%= f.radio_button(:objective, "2", class:"w-5 h-5") %>
                 <span
-                  class="ml-3 font-medium text-gray-900"><%= label_tag(:objective, "Je veux garder la ligne") %></span>
+                  class="ml-3 font-medium text-gray-900">Je veux garder la ligne</span>
               </label>
             </div>
           </li>
@@ -154,7 +154,7 @@
               <label class="flex items-center text-sm cursor-pointer">
                 <%= f.radio_button(:objective, "3", class:"w-5 h-5") %>
                 <span
-                  class="ml-3 font-medium text-gray-900"><%= label_tag(:objective, "Je veux prendre du poids") %></span>
+                  class="ml-3 font-medium text-gray-900">Je veux prendre du poids</span>
               </label>
             </div>
           </li>
