--- a/app/views/users/users/show.html.erb
+++ b/app/views/users/users/show.html.erb
@@ -14,19 +14,19 @@
         <!-- Content -->
         <div class="max-w-7xl mx-auto px-4 sm:px-6 md:px-8">
           <div class="mt-12">
-           <h1 class="text-2xl -mt-8 font-semibold text-gray-700 mb-5">Bonjour <span
-                    class="text-primary-800 text-3xl ml-1s "><%= current_user.first_name %></span> !</h1>
-                 
-            <h2 class="text-base text-gray-500 "> Ton récap santé : </h2>   
+            <h1 class="text-2xl -mt-8 font-semibold text-gray-700 mb-5">Bonjour <span
+                class="text-primary-800 text-3xl ml-1s "><%= current_user.first_name %></span> !</h1>
+
+            <h2 class="text-base text-gray-500 "> Ton récap santé : </h2>
             <ul class="mt-3 grid grid-cols-1 gap-5 sm:gap-6 sm:grid-cols-2 lg:grid-cols-4">
               <li class="col-span-1 flex shadow-sm rounded-md">
                 <div
                   class="flex-shrink-0 flex items-center justify-center w-16 bg-pink-600 text-white text-sm font-medium rounded-l-md">
-                  <svg class="w-12 h-12 fill-current mt-3 ml-2" fill="none" xmlns:x="http://ns.adobe.com/Extensibility/1.0/"
+                  <svg class="w-12 h-12 fill-current mt-3 ml-2" fill="none"
+                    xmlns:x="http://ns.adobe.com/Extensibility/1.0/"
                     xmlns:i="http://ns.adobe.com/AdobeIllustrator/10.0/" xmlns:graph="http://ns.adobe.com/Graphs/1.0/"
-                    xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"
-                    x="0px" y="0px" viewBox="0 0 100 125" style="enable-background:new 0 0 100 100;"
-                    xml:space="preserve">
+                    xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px"
+                    y="0px" viewBox="0 0 100 125" style="enable-background:new 0 0 100 100;" xml:space="preserve">
                     <switch>
                       <foreignObject requiredExtensions="http://ns.adobe.com/AdobeIllustrator/10.0/" x="0" y="0"
                         width="1" height="1" />
@@ -36,8 +36,8 @@
                             d="M46.7,67.2l3.1-3.1c-0.1-5.8,1.8-12,4.6-17.4V7.5c0-2.8-2.3-5-5-5h-39c-2.8,0-5,2.3-5,5v57.9c0,2.8,2.3,5,5,5H33     C36.7,67,42,65.8,46.7,67.2z M41.3,39.6c-2,0-3.6-1.6-3.6-3.6c0-2,1.6-3.6,3.6-3.6c2,0,3.6,1.6,3.6,3.6     C45,38,43.3,39.6,41.3,39.6z M45,47.2c0,2-1.6,3.6-3.6,3.6c-2,0-3.6-1.6-3.6-3.6c0-2,1.6-3.6,3.6-3.6C43.3,43.6,45,45.2,45,47.2z      M13.1,23.8V12.9c0-1.4,1.2-2.6,2.6-2.6h28.3c1.4,0,2.6,1.2,2.6,2.6v10.9c0,1.4-1.2,2.6-2.6,2.6H15.7     C14.2,26.4,13.1,25.2,13.1,23.8z M18.3,62c-2,0-3.6-1.6-3.6-3.6c0-2,1.6-3.6,3.6-3.6c2,0,3.6,1.6,3.6,3.6     C21.9,60.4,20.3,62,18.3,62z M18.3,50.8c-2,0-3.6-1.6-3.6-3.6c0-2,1.6-3.6,3.6-3.6c2,0,3.6,1.6,3.6,3.6     C21.9,49.2,20.3,50.8,18.3,50.8z M18.3,39.6c-2,0-3.6-1.6-3.6-3.6c0-2,1.6-3.6,3.6-3.6c2,0,3.6,1.6,3.6,3.6     C21.9,38,20.3,39.6,18.3,39.6z M29.8,62c-2,0-3.6-1.6-3.6-3.6c0-2,1.6-3.6,3.6-3.6c2,0,3.6,1.6,3.6,3.6     C33.4,60.4,31.8,62,29.8,62z M29.8,50.8c-2,0-3.6-1.6-3.6-3.6c0-2,1.6-3.6,3.6-3.6c2,0,3.6,1.6,3.6,3.6     C33.4,49.2,31.8,50.8,29.8,50.8z M29.8,39.6c-2,0-3.6-1.6-3.6-3.6c0-2,1.6-3.6,3.6-3.6c2,0,3.6,1.6,3.6,3.6     C33.4,38,31.8,39.6,29.8,39.6z M37.7,58.4c0-2,1.6-3.6,3.6-3.6c2,0,3.6,1.6,3.6,3.6c0,2-1.6,3.6-3.6,3.6     C39.3,62,37.7,60.4,37.7,58.4z" />
                           <path
                             d="M86.6,44.7c-7.6-7.6-16.2-10.3-20.1-6.4c-5.7,5.7-12.7,18.4-11.3,27.8l-7.3,7.3c-3.5-2.4-8.3-2-11.5,1.1     c-3.5,3.5-3.5,9.2,0,12.8c1.4,1.4,3.2,2.3,5.1,2.5c0.3,1.9,1.1,3.7,2.5,5.1c3.5,3.5,9.2,3.5,12.8,0c3.1-3.1,3.5-8,1.1-11.5     l7.3-7.3c9.4,1.3,22.1-5.6,27.8-11.3C96.9,60.9,94.1,52.2,86.6,44.7z M53.1,81.7c-0.5,0.5-0.7,1.1-0.7,1.7c0,0.6,0.3,1.2,0.8,1.7     c0,0,0.3,0.2,0.3,0.2c1.7,1.7,1.7,4.6,0,6.3c-1.7,1.7-4.6,1.7-6.3,0c-1-1-1.4-2.4-1.2-3.8c0.2-1.4-1.2-2.8-2.6-2.6     C42,85.4,40.6,85,39.6,84c-1.7-1.7-1.7-4.6,0-6.3c1.7-1.7,4.5-1.7,6.3,0c0,0,0,0,0,0c0,0,0.2,0.2,0.2,0.3c0.4,0.5,1,0.8,1.7,0.8     c0.6,0,1.3-0.2,1.7-0.7l7.3-7.3c0.4,0.7,0.9,1.4,1.6,2c0.6,0.6,1.3,1.1,2,1.6L53.1,81.7z M89.7,61.5c-1.4,1.4-7.6-0.4-13.6-6.4     c-6-6-7.9-12.2-6.4-13.6c1.4-1.4,7.6,0.4,13.6,6.4C89.4,53.9,91.2,60.1,89.7,61.5z" />
-                          <ellipse transform="matrix(0.7071 -0.7071 0.7071 0.7071 -13.0773 71.4453)" cx="79.7"
-                            cy="51.5" rx="1.9" ry="7" />
+                          <ellipse transform="matrix(0.7071 -0.7071 0.7071 0.7071 -13.0773 71.4453)" cx="79.7" cy="51.5"
+                            rx="1.9" ry="7" />
                         </g>
                       </g>
                     </switch>
@@ -45,8 +45,8 @@
                 </div>
                 <div
                   class="flex-1 flex items-center justify-between border-t border-r border-b border-gray-200 bg-white rounded-r-md flex-no-wrap">
-                  <div class="flex-1 px-4 py-2 text-sm flex-no-wrap"> 
-                   <p class="text-gray-900 font-medium hover:text-gray-600"><%= current_user.daily_cal %> kcal</p>                  
+                  <div class="flex-1 px-4 py-2 text-sm flex-no-wrap">
+                    <p class="text-gray-900 font-medium hover:text-gray-600"><%= current_user.daily_cal %> kcal</p>
                     <p class="text-gray-500">Tes besoins par jour</p>
                   </div>
                 </div>
@@ -113,9 +113,8 @@
                   class="flex-shrink-0 flex items-center justify-center w-16 bg-green-500 text-white text-sm font-medium rounded-l-md">
                   <svg class="w-14 h-14 fill-current mt-3" fill="none" xmlns:x="http://ns.adobe.com/Extensibility/1.0/"
                     xmlns:i="http://ns.adobe.com/AdobeIllustrator/10.0/" xmlns:graph="http://ns.adobe.com/Graphs/1.0/"
-                    xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"
-                    x="0px" y="0px" viewBox="0 0 100 125" style="enable-background:new 0 0 100 100;"
-                    xml:space="preserve">
+                    xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px"
+                    y="0px" viewBox="0 0 100 125" style="enable-background:new 0 0 100 100;" xml:space="preserve">
                     <switch>
                       <foreignObject requiredExtensions="http://ns.adobe.com/AdobeIllustrator/10.0/" x="0" y="0"
                         width="1" height="1" />
@@ -151,9 +150,28 @@
               <div class="max-w-7xl mx-auto px-4 sm:px-6 md:px-8 ">
                 <% if @user.current_plan_id? %>
                 <h1 class="text-xl -ml-8 font-semibold text-gray-700 mb-5">Ton dernier <span
-                    class="text-primary-800 text-2xl mx-2">programme</span> du <%= @plan.created_at.strftime("%d-%m-%Y") %> : </p>
+                    class="text-primary-800 text-2xl mx-1">programme</span> <span class="text-xl">du
+                    <%= @plan.created_at.strftime("%d/%m/%Y") %> : </span></p>
                 </h1>
+                <h2 class="text-sm text-gray-500 -ml-8 mb-3 "> Ce programme <span
+                    class="font-semibold text-primary-800"><%= @plan.diet_type_title.downcase %> </span>a été élaboré
+                  avec amour et calculé selon tes objectifs et tes informations. </h2>
                 <%= render 'users/plans/show'%>
+
+                <% else %>
+                
+                <h1 class="text-xl mb-8 -ml-8 font-semibold text-gray-700 ">Tu n'as pas encore de programme ? </h1>
+                 <h3 class=" text-gray-700 my-5"> Crée un nouveau programme ici : </h3>
+                <%= render 'users/plans/new' %>
+                <h3 class=" text-gray-700 my-5"> ... ou sélectionne un ancien programme ici :</h3>
+                <%= link_to plans_path, class:"text-gray-600 hover:bg-primary-800 hover:text-white group flex items-center px-2 py-2 text-sm font-medium rounded-md" do %>
+                <svg class="text-gray-400 group-hover:text-white mr-3 h-6 w-6" xmlns="http://www.w3.org/2000/svg"
+                  fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                    d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z" />
+                </svg>
+                Mes programmes
+                <% end %>
                 <% end %>
               </div>
 
