homepage text updated

--- a/app/views/users/plans/_new.html.erb
+++ b/app/views/users/plans/_new.html.erb
@@ -30,7 +30,7 @@
       <!-- Modal Inner Container -->
       <div class="max-h-screen w-8/12 relative">
         <!-- Modal Card -->
-        <div class="m-1 bg-white rounded-xl shadow ">
+        <div class="m-1 bg-gray-100 rounded-xl shadow ">
 
           <div class="m-auto max-w-6xl p-12">
 
