--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -20,7 +20,11 @@ body {
 
 
 *:focus {
-  outline: none;
+  outline: none !important;
+}
+
+*:active {
+  outline: none !important;
 }
 
 .nav-links {
