--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -92,7 +92,7 @@
           </div>
         </div>
 
-        <div class="text-center text-gray-500 mt-4">
+        <div class="text-center text-gray-500 hover:text-gray-800 mt-4">
          <%= render "devise/shared/links" %>
         </div>
 
