homepage & footer front tweaks

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,15 +1,15 @@
 <footer class="text-gray-700 body-font bg-primary-500">
   <div class="container px-5 py-2 md:py-4 mx-auto flex items-center sm:flex-row flex-col">
-    <a class="flex title-font font-semibold items-center md:justify-start justify-center text-gray-900">
+    <a class="flex title-font font-semibold items-center md:justify-start justify-center text-gray-700">
     <%= image_tag("logofooter.svg", size: "48x48") %>
-      <span class="ml-3 font-semibold text-xl text-white">Meal</span>ories
+      <span class="ml-3 font-semibold text-xl text-white mr-1">Meal</span><span class="mt-1">ories</span>
     </a>
     <p class="text-sm text-gray-500 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-200 sm:py-2 sm:mt-0 mt-4">© 2020 with <span style="color:red"><i class="fas fa-heart"></i></span> by les Perruches
     </p>
     <span class="inline-flex sm:ml-auto sm:mt-0 mt-4 justify-center sm:justify-start">
       <a href="https://github.com/martinmoradi/mealories" target="_blank" class="flex flex-col w-12 h-12 focus:outline-none rounded-lg text-white text-xs self-center m-2 py-1 opacity-2">
-      <!--github svg-->
-        <span style="color:black"><i class="fab fa-github-square fa-3x"></i></span>
+           <!--github svg-->
+        <span style="color:dark-gray"><i class="fab fa-github fa-3x"></i></span>
         </a>
     </span>
   </div>
