--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -13,26 +13,23 @@
       <% else%>
       <%= link_to "Inscription / Connexion", new_user_registration_path, class: "bg-primary-500 text-white active:bg-primary-600 font-bold uppercase text-xs md:text-sm lg:text-base px-6 py-3 rounded-xl shadow hover:shadow-lg outline-none focus:outline-none mr-1 mb-1", type: "button", style: "transition: all .15s ease" %>
       <% end %>
-
-
     </div>
 
     <div class="animate__animated animate__fadeInRight right-page">
       <%= image_tag 'chef.svg', class: "chief lg:mt-24"%>
     </div>
+
   </div>
 
 
 
-  <h1 data-aos="fade-up" class="text-2xl font-bold  tracking-wide	 text-center my-12 md:my-20">Bien manger n'a jamais été aussi facile !</h1>
+  <h1 data-aos="fade-up" class="text-lg md:text-xl lg:text-2xl text-gray-700 font-semibold mb-5 text-center my-12 md:my-20">Bien manger n'a jamais été aussi facile !</h1>
 
   <!--Timeline-->
     <div data-aos="fade-up" class=" my-10 md:my-14 lg:my-24 ">
-     
       <div class="flex justify-center">
         <%= image_tag 'timeline-web.svg', class: "tlweb flex"%>
       </div>
-    
     </div>
 
   <!--presentation start-->
@@ -72,57 +69,81 @@
 
   </div>
 
-  <!--faq start-->
-  <div data-aos="fade-up" class="px-5 py-24 mx-auto text-gray-700">
-    <div class="mb-20 text-center">
-      <h1 class="mb-1 text-2xl font-bold text-center text-gray-800 sm:text-3xl title-font">
-        Questions fréquentes
-      </h1>
-      <p class="mx-auto text-base leading-relaxed xl:w-2/4 lg:w-3/4">
-        Parce que tu hésites encore ? 
-      </p>
-    </div>
-    <div class="flex flex-wrap -mx-2 lg:w-4/5 sm:mx-auto sm:mb-2">
-      <div class="w-full px-4 py-2 lg:w-1/2">
-        <details class="mb-4  rounded-md">
-          <summary class="px-4 py-2 font-semibold  rounded-md cursor-pointer focus:outline-none">
-            Comment ça marche ?
-          </summary>
+  <!--faq start--> 
 
-          <p class="px-4 py-2 bg-gray-50 rounded-xl">
-           Nos supers algorithmes de la mort qui tue &copy; sont capables d'analyser les recettes et de calculer une journée de repas adaptée à tes besoins.
-          </p>
-        </details>
-        <details class="mb-4  rounded-md">
-          <summary class="px-4 py-2 font-semibold  rounded-md cursor-pointer focus:outline-none">
-            Est-ce gratuit ?
-          </summary>
 
-          <p class="px-4 py-2 bg-gray-50 rounded-xl">
-            Oui !
-          </p>
-        </details>
+<div data-aos="fade-up">
+  <div class="max-w-7xl mx-auto py-16 px-4 sm:px-6 lg:py-20 lg:px-8">
+    <div class="lg:grid lg:grid-cols-3 lg:gap-8">
+      <div>
+        <h2 class="text-3xl font-bold text-gray-700">
+          Questions fréquentes
+        </h2>
+        <p class="mt-4 text-lg text-gray-500">Parce que t'hésites encore ? </p>
+         <a href="#" class="font-medium text-indigo-600 hover:text-indigo-500">Contacte-nous !</a>
       </div>
-      <div class="w-full px-4 py-2 lg:w-1/2">
-        <details class="mb-4  rounded-md">
-          <summary class="px-4 py-2 font-semibold  rounded-md cursor-pointer focus:outline-none">
-            Comment sont calculés mes journées ?
-          </summary>
+      <div class="mt-12 lg:mt-0 lg:col-span-2">
+        <dl class="space-y-12">
+          <div>
+            <dt class="text-lg leading-6 font-medium text-gray-900">
+             Comment ça marche ?
+            </dt>
+            <dd class="mt-2 text-base text-gray-500">
+               Nos supers algorithmes de la mort qui tue &copy; sont capables d'analyser les recettes et de calculer une journée de repas adaptée à tes besoins.
+            </dd>
+          </div>
 
-          <p class="px-4 py-2 bg-gray-50 rounded-xl">
-            Nous utilisons des formules bien connues des nutritionnistes pour tous nos algorithmes !
-          </p>
-        </details>
-        <details class="mb-4  rounded-md">
-          <summary class="px-4 py-2 font-semibold  rounded-md cursor-pointer focus:outline-none">
-            Est-ce que je peux ajouter ma recette ?
-          </summary>
+          <div>
+            <dt class="text-lg leading-6 font-medium text-gray-900">
+              Est-ce gratuit ?
+            </dt>
+            <dd class="mt-2 text-base text-gray-500">
+              Oui !
+            </dd>
+          </div>
 
-          <p class="px-4 py-2 bg-gray-50 rounded-xl">
-            Nous travaillons très dûr pour incorporer cette possibilité dans le futur très proche !
-          </p>
-        </details>
+          <div>
+            <dt class="text-lg leading-6 font-medium text-gray-900">
+             Comment sont calculées mes journées ?
+            </dt>
+            <dd class="mt-2 text-base text-gray-500">
+             Nous utilisons des formules issues de la recherche pour tous nos algorithmes, nous avons simplement besoin de connaître ton âge, ton poids et ta taille !
+            </dd>
+          </div>
+
+          <div>
+            <dt class="text-lg leading-6 font-medium text-gray-900">
+              Est-ce que je peux ajouter ma recette ?
+            </dt>
+            <dd class="mt-2 text-base text-gray-500">
+  Nous travaillons très dûr pour incorporer cette possibilité dans un futur très proche !            </dd>
+          </div>
+        </dl>
+      </div>
       </div>
     </div>
+  </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
   </div>
 </div>
