homepage faq change

--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -92,8 +92,8 @@
                 Comment ça marche ?
               </dt>
               <dd class="mt-2 text-base text-gray-500">
-                Nos supers algorithmes de la mort qui tue &copy; sont capables d'extraire les informations nutritionnelles de recettes et de générer
-                une journée de repas adaptée à tes besoins.
+                Nos supers algorithmes de la mort qui tue &copy; sont capables d'extraire les informations nutritionnelles de recettes et de te concocter
+                un programme de repas adaptée à tes besoins.
               </dd>
             </div>
 
