--- a/app/views/users/users/show.html.erb
+++ b/app/views/users/users/show.html.erb
@@ -160,8 +160,8 @@
 
                 <% else %>
                 
-                <h1 class="text-xl mb-8 -ml-8 font-semibold text-gray-700 ">Tu n'as pas encore de programme ? </h1>
-                 <h3 class=" text-gray-700 my-5"> Crée un nouveau programme ici : </h3>
+                <h1 class="text-xl mb-24 -ml-8 font-semibold text-gray-700 ">Tu n'as pas encore de programme ? </h1>
+                 <h3 class=" text-gray-700 my-5 -mt-5"> Crée un nouveau programme ici : </h3>
                 <%= render 'users/plans/new' %>
                 <h3 class=" text-gray-700 my-5"> ... ou sélectionne un ancien programme ici :</h3>
                 <%= link_to plans_path, class:"text-gray-600 hover:bg-primary-800 hover:text-white group flex items-center px-2 py-2 text-sm font-medium rounded-md" do %>
