--- a/app/views/users/users/show.html.erb
+++ b/app/views/users/users/show.html.erb
@@ -155,7 +155,7 @@
                 </h1>
                 <h2 class="text-sm text-gray-500 -ml-8 mb-3 "> Ce programme <span
                     class="font-semibold text-primary-800"><%= @plan.diet_type_title.downcase %> </span>a été élaboré
-                  avec amour et calculé selon tes objectifs et tes informations. </h2>
+                  avec amour et concocté selon tes objectifs et tes informations. </h2>
                 <%= render 'users/plans/show'%>
 
                 <% else %>
